feat: add forgetting and special study flows
